ATLAS-4166:UI: Misalignment happened on entity page, when resized the browser window fixed

--- a/dashboardv3/public/css/scss/table.scss
+++ b/dashboardv3/public/css/scss/table.scss
@@ -277,7 +277,7 @@ td {
     pre.scroll-y {
         max-height: 200px;
         overflow-y: auto;
-        word-break: break-word;
+        word-break: break-all;
     }
 
     &.searchTableName {
